UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
/* ... */
.preloading-pages-spinner {
    position: absolute;
    top: 50%;
    left: 50%;
    display: none;
    z-index: 9999;
}

.invisible {
    visibility: hidden;
}

.textarea-no-resize {
    resize: none;
}

.jqSimpleConnect {
    opacity: 0.4;
}

#forum-button-panel {
    margin-top: 10px;
}

.note-editor {
    .editor-toolbar {
        a {
            border-radius: 0;
        }
    }
    .bottom-buttons {
        text-align: right;
    }
}

.list-container {
    &.selectable {
        tbody {
            cursor: pointer;

            .active {
                td {
                    background-color: @border-color;
                }
            }
        }
    }

    .alert-info {
        margin-top: 8px;
        margin-bottom: 8px;
    }

    table {
        tr {
            border-bottom: 1px solid @separation-line-color;

            td {
                border: none;

                .form-control {
                    height: 28px;
                }
            }

            .alert {
                padding: 3px 7px;
                margin: 1px 0 0 0;
            }
        }
    }

    .buttons {
        vertical-align: middle;
        text-align: right;

        .btn-default {
            margin-left: 0.5em;
            margin-bottom: 0.5em;

            &:first-of-type {
                margin-left: 0;
            }
        }
    }

    .info-row {
        td {
            padding: 1em;
        }
    }
}

.panel {
    .panel-buttons {
        .btn {
            max-width: fit-content;
        }
    }

    .panel-body {
        .panel-bottom-buttons {
            padding-top: 1em;
        }
    }
}

.text-right {
    text-align: right;
}

.page-listing {
    height: 400px;
    overflow-y: auto;

    .page-row {
        cursor: pointer;

        td {
            padding: 0.3em 0.3em 0.3em 0.3em;
            text-align: left;
            vertical-align: middle;
        }

        .buttons {
            min-width: 90px;
            text-align: right;

            button {
                margin: 0;
            }
        }

        .ridics-checkbox {
            width: 2em;
            vertical-align: bottom;
            padding-bottom: 2px;

            label {
                margin: 0;
            }
        }
    }
}

.body-content {
    height: 458px;
    overflow-y: auto;
    display: flex;
    flex-wrap: wrap;
    width: 100%;

    .page-text {
        flex: 1 0 55%;
        min-width: 20em;
        padding-right: 1.7em;
    }

    .image-preview {
        flex: 1 0 45%;
        text-align: center;
    }

    .sub-content {
        width: 100%;
    }
}

.page-move-distance {
    max-width: 5em;
    display: inline-block;
    vertical-align: middle;
    margin-left: 0.5em;
}


.editor-toolbar,
.CodeMirror {
    border-radius: 0;
}

.project-snapshot-new {
    margin: 1em;

    .panel {
        border: none;
        box-shadow: none;

        .panel-heading {
            border-radius: 0;
            border: none;
            background-color: @menu-background-color;
            color: white;
            font-weight: bold;

            .collapse-icon {
                float: right;
            }

            a {
                color: white;

                &:focus {
                    text-decoration: none;
                }

                &[aria-expanded=true] .fa-chevron-down {
                    display: none;
                }

                &[aria-expanded=false] .fa-chevron-up {
                    display: none;
                }
            }
        }

        .panel-collapse {
            border: @box-border;
        }
    }


    .publish-resource-panel {
        border: none;

        table {
            .include-all {
                padding: 8px 0px;
            }

            .version-label {
                max-width: 4em;
            }

            th {
                label {
                    font-weight: bold;
                }
            }

            td {
                select {
                    max-width: 4em;
                }

                .btn {
                    padding: 2px 6px;
                }

                .bootstrap-select {
                    max-width: 5em;

                    .inner {
                        max-height: 35vh !important; // override max-height set by bootstrap-select
                    }
                    
                    .dropdown-menu {
                        .active {
                            a,
                            a:hover,
                            a:focus {
                                background-color: @button-background-color;
                            }
                        }
                    }
                }

                select {
                    padding: 2px 6px;
                    height: 24px;
                    display: initial;
                }
            }
        }
    }

    #snapshotInfo {
        .edition-note-preview {
            margin-left: 1em;
        }

        .control-input {
            padding-top: 7px;

            li {
                margin: 0.2em 0;
            }
        }

        .form-horizontal > button {
            float: right;
        }
    }

    #resourcePreviewModal {
        img {
            width: 100%;
        }

        .audio {
            margin: 0;
        }
    }
}

.dropzone-in-modal {
    min-height: 250px;
    
    .dz-default.dz-message {
        background-image: none;

        span {
            display: block;
            font-style: italic;
            position: absolute;
            top: 45%;
            text-align: center;
        }
    }
}

